# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: mort-CI.yml
gendiff/: cli.py  gendiff.py  inner_view_diff.py  parser.py  tools.py
gendiff/formats/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py
tests/: test_generate_diff.py
tests/fixtures/: result_json.txt
